[package]
name = "rust-lisp-trait"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
inline-proc = { version = "0.1.0", features = ["ron"] }
